src/test/deca/syntax/parser/valid/test/test_pars_val_type_commence_$.deca
// Description:
//    Programme minimaliste testant l'arbre d'affectation de l'instruction type (nom commençant par un $).
//
// Resultats:
//    
//
// Historique:
//    cree le 01/01/2023


{
    $int x = 3;
}