src/test/deca/syntax/parser/invalid/affectation_booleen_entier.deca
// Description:
//    tests de programme incorrect lexicalement(littéral entier non codable comme entier signé positif sur 32 bits)
//
// Resultats:
//    Ligne 12 : Erreur (affectation d'un entier à un type bool)
//    
//
// Historique:
//    cree le 04/01/2023

{
    bool a = 321
}

